# oop-online-shop

./: .gitignore  MyForm.cpp  README.md
cpp/: DB_functions.cpp  DB_functions.h  MyForm.h  Project2.vcxproj  main.cpp  mysql project.sln  mysql project.vcxproj  mysql project.vcxproj.filters  onlineStore.cpp  onlineStore.h
cpp/Database/: mysql project.vcxproj  mysql project.vcxproj.filters
cpp/GUI/oop_gui/: oop_gui.sln
cpp/VS code/: DB_functions.cpp  main.cpp  mysql_driver.h  onlineStore.cpp  onlineStore.h
cpp/headers/: onlineStore.h
cpp/x64/Debug/: vc143.idb
cpp_project/online_shop2/online_shop2/: CMakeLists.txt  Controller.cpp  Controller.h  Model.cpp  Model.h  ObjectPool.cpp  ObjectPool.h  ProductInfo.h  Selection.cpp  Selection.h  UserPersonalInfo.h  Utils.h  View.cpp  View.h  baseEntity.cpp  baseEntity.h  main.cpp  notes.txt  online store.vcxproj  online store.vcxproj.filters  online_shop2.vcxproj  online_shop2.vcxproj.filters  product.h  trash.cpp  user.h  users.csv
cpp_project/online_shop2/online_shop2/x64/Debug/: online_shop2.exe.recipe  vc143.idb
cpp_project/online_shop2/online_shop2/x64/Debug/online_shop2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  online_shop2.lastbuildstate
java/: .gitignore  DBConnection.java  Main.java
mysql/: online_shop.sql
project_java/: Cart.java  DBConnection.java  Main.java  Product.java
project_java/.metadata/: version.ini
x64/Debug/: Project2.exe.recipe  Project2.vcxproj.FileListAbsolute.txt  Project2.vcxproj.GenerateResource.cache
(+91 files in other folders)
